# mq-db

./: .gitignore  Cargo.toml  LICENSE  README.md  store.mq-db.v4.bak
.github/workflows/: audit.yml  ci.yml  codeql.yml  pages.yml  release.yml  unused-deps.yml  zizmor.yml
assets/: architecture.md  demo.md  demo.tape  ogp.html  query-guide.md
benches/: compare_bench.rs  mq_db_bench.rs  mqdb_bench.rs
docs/: STORAGE_FORMAT.md  index.html
docs/books/: book.toml
docs/books/src/: SUMMARY.md  index.md
docs/books/src/reference/: block-model.md  index-layers.md  index.md  sql-ddl.md  sql-examples.md  sql-functions.md  sql-schema.md  storage-format.md
docs/books/src/start/: cli.md  http-server.md  index.md  install.md  library.md  repl.md  tui.md
docs/books/theme/: custom.css  head.hbs  highlight-mq.js
src/: block.rs  discover.rs  document.rs  error.rs  index.rs  indexes.rs  lib.rs  mq_engine.rs  query.rs  sql.rs  storage.rs  store.rs  tui.rs
src/storage/: catalog.rs  codec.rs  mod.rs  page.rs
