[package]
name = "mqdb"
version = "0.1.0"
edition = "2024"
description = "Markdown-specialized embedded database with interval-indexed block storage and hierarchical query support"
license = "MIT"

[dependencies]
mq-markdown = "0.5.31"
mq-lang = "0.5.31"
serde_yaml = "0.9"
thiserror = "2.0"
sqlparser = "0.62"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
duckdb = "1.10503"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }

[[bin]]
name = "mqdb"
path = "src/bin/mqdb.rs"

[[bench]]
name = "mqdb_bench"
harness = false

[[bench]]
name = "compare_bench"
harness = false
