[package]
name = "mq-db"
version = "0.1.0"
edition = "2024"
description = "Markdown-specialized embedded database with interval-indexed block storage and hierarchical query support"
keywords = ["markdown", "jq", "query", "database"]
readme = "README.md"
categories = ["command-line-utilities", "text-processing", "database-implementations"]
repository = "https://github.com/harehare/mq-db"
license = "MIT"

[dependencies]
mq-markdown = "0.5.31"
mq-lang = "0.5.31"
serde_yaml = "0.9"
thiserror = "2.0"
sqlparser = "0.62"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.29"
crossterm = "0.28"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }

[dev-dependencies]
tempfile = "3"
rstest = "0.23"
rusqlite = { version = "0.32", features = ["bundled", "functions"] }

[[bin]]
name = "mq-db"
path = "src/bin/mq-db.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = 'abort'
strip = true

